--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.microservices</groupId>
-	<artifactId>api-gateway</artifactId>
+	<artifactId>practice-api-gateway</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>api-gateway</name>
+	<name>practice-api-gateway</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
